in odd-ploidy individuals (i.e. using the selfing.rate argument in
IterateHWE and related functions). The selfing rate is set to zero in these
individuals to prevent an error.

IteratePopStruct and IteratePopStructLD now have an argument called
maxR2changeratio to allow more fine-tuning of the number of principal components
used.

## Changes in v1.6 ##

TestOverdispersion now prints a helpful suggestion for which overdispersion
parameter to use, as well as returning that value in its output.
The use of qqman has been eliminated from the vignettes.

ExpectedHindHe, ExpectedHindHeMapping, and SimAlleleDepth now have a contamRate
parameter to simulate sample cross contamination when sampling allelic read
depth, and an errorRate parameter to simulate sequencing error.

A bug has been fixed in Export_GWASpoly so that special characters in sample
names are not converted to periods.

## Changes in v1.5 ##

SimGenotypesMapping, ExpectedHindHeMapping, Export_polymapR_probs,
reverseComplement, and readDArTag functions added.

Bug fixed in GetProbableGenotypes when there are multiple possiblePloidies and
multiallelic is set to "na" or "correct".

Bug fixed in process_sam_multi.py for cases where sample names contain spaces.

Bug fixed in HindHeMapping when loci are discarded due to difficulty estimating
parental genotypes.

Vignettes have been updated with a figure to assist in estimating inbreeding.

## Changes in v1.4 ##

Export_GWASpoly can now export posterior mean genotypes.

Export_adegenet_genind function added.

## Changes in v1.3 ##

Added the ExpectedHindHe, SimGenotypes, and SimAlleleDepth functions.  The
first in particular is intended to help the user to select a Hind/He threshold
for filtering markers.

Added the Export_Structure function.

In the variant calling pipeline, process_isoloci.py has been modified so that
the user can set an expected and maximum Hind/He. The previous functionality,