@@ -1,6 +1,6 @@
 Package: polyRAD
-Version: 1.6.0.9001
-Date: 2022-04-03
+Version: 1.6.0.9002
+Date: 2022-08-28
 Title: Genotype Calling with Uncertainty from Sequencing Data in Polyploids and Diploids
 Authors@R: c(person("Lindsay V.", "Clark", email = "Lindsay.Clark@seattlechildrens.org",
                     role = c("aut", "cre"), 
