@@ -1,0 +1,10 @@
+qseqid	sseqid	sstart	send	pident
+Chr1_30668472|Ref_0001	Chr1	30668447	30668500	100
+Chr1_30668472|Alt_0002	Chr1	30668447	30668500	98.1
+Chr1_30668472|RefMatch_0003	Chr1	30668447	30668500	98.1
+Chr1_30668472|RefMatch_0004	Chr5	2478944	2478985	97.6
+Chr3_45681230|Ref_0001	Chr3	45681255	45681202	100
+Chr3_45681230|Alt_0002	Chr3	45681258	45681205	98.1
+Chr3_45681230|RefMatch_0003	Chr3	45681258	45681205	98.1
+Chr3_45681230|AltMatch_0004	Chr3	45681258	45681205	96.3
+Chr3_45681230|AltMatch_0005	Chr3	45681258	45681205	96.3
