@@ -1,0 +1,10 @@
+AlleleID,CloneID,AlleleSequence,readCountSum,Sample1_1.1_A1,Sample2_1.1_B1,Sample3_1.1_C1,Something_1.1_D1
+Chr1_30668472|Ref_0001,Chr1_30668472,CATGTTAGGCATTAGCCAGGCCTTAGAGGTCTGAACGTATGGTTATAAAGCCTT,159,46,93,0,20
+Chr1_30668472|Alt_0002,Chr1_30668472,CATGTTAGGCATTAGCCAGGCCTTAAAGGTCTGAACGTATGGTTATAAAGCCTT,125,0,57,68,0
+Chr1_30668472|RefMatch_0003,Chr1_30668472,CATGTTAGGCATCAGCCAGGCCTTAGAGGTCTGAACGTATGGTTATAAAGCCTT,60,13,2,45,0
+Chr1_30668472|RefMatch_0004,Chr1_30668472,CATGTTAGGCATTAGCCAGGCCTTAGAGGTCTGAACGTATGGATATAAAGCCTT,178,20,80,63,15
+Chr3_45681230|Ref_0001,Chr3_45681230,TTGGCCGTGCTCTCATCTGGATCATACTGGCTCATCGAGCGTGGTAGATCATAG,166,23,84,59,0
+Chr3_45681230|Alt_0002,Chr3_45681230,TTGGCCGTGCTCTCATCTGGATCATACTAGCTCATCGAGCGTGGTAGATCATAG,40,0,0,0,40
+Chr3_45681230|RefMatch_0003,Chr3_45681230,TTGGCCGTGCTCTCATCTGGATCATACTGGCTCATCGAGTGTGGTAGATCATAG,15,15,0,0,0
+Chr3_45681230|AltMatch_0004,Chr3_45681230,TTGACCGTGCTCTCATCTGGATCATACTAGCTCATCGAGCGTGGTAGATCATAG,46,0,0,1,45
+Chr3_45681230|AltMatch_0005,Chr3_45681230,TTGGCCGTGCTCACATCTGGATCATACTAGCTCATCGAGCGTGGTAGATCATAG,49,0,49,0,0
